Add abort_on_error support for switch
Enable abort on error behavior for whole switch command (both unload and
load phases). "switch" is now an allowed value for abort_on_error
configuration option.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -68,7 +68,8 @@ array set g_state_defs [list\
 array set g_config_defs [list\
    contact {MODULECONTACT root@localhost 0 s}\
    abort_on_error {MODULES_ABORT_ON_ERROR {@abortonerror@} 0 l {load ml\
-      mod-to-sh purge reload switch_unload try-load unload} {} {} eltlist}\
+      mod-to-sh purge reload switch switch_unload try-load unload} {} {}\
+      eltlist}\
    auto_handling {MODULES_AUTO_HANDLING @autohandling@ 0 b {0 1}}\
    avail_indepth {MODULES_AVAIL_INDEPTH @availindepth@ 0 b {0 1}}\
    avail_output {MODULES_AVAIL_OUTPUT {@availoutput@} 0 l {modulepath alias\
