install: add --enable-source-cache configure option
Introduce the --enable-source-cache configure option to enable at
installation time the source_cache option. Option is disabled by
default.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -102,6 +102,9 @@ advversspec := @advversspec@
 # raise error if root name is already loaded
 uniquenameloaded := @uniquenameloaded@
 
+# cache file content evaluated with source command
+sourcecache := @sourcecache@
+
 # module name search matching style
 searchmatch := @searchmatch@
 
