--- a/site.exp.in
+++ b/site.exp.in
@@ -72,6 +72,8 @@ set install_advversspec "@advversspec@"
 
 set install_uniquenameloaded "@uniquenameloaded@"
 
+set install_sourcecache "@sourcecache@"
+
 set install_searchmatch "@searchmatch@"
 
 set install_wa277 "@wa277@"
