--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -120,7 +120,7 @@ array set g_config_defs [list\
    silent_shell_debug {MODULES_SILENT_SHELL_DEBUG @silentshdbgsupport@ 0 b {0\
       1}}\
    siteconfig {{} {@etcdir@/siteconfig.tcl} 0 s}\
-   source_cache {MODULES_SOURCE_CACHE 0 0 b {0 1}}\
+   source_cache {MODULES_SOURCE_CACHE @sourcecache@ 0 b {0 1}}\
    sticky_purge {MODULES_STICKY_PURGE {@stickypurge@} 0 s {error warning\
       silent}}\
    tag_abbrev {MODULES_TAG_ABBREV {@tagabbrev@} 0 l {} {} initConfTagAbbrev}\
