ts: add abort_on_error switch and switch_unload tests

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -23,5 +23,14 @@ if {[info exists env(TESTSUITE_ABORT_ON_ERROR)]} {
             module-tag super-sticky err/1.0
             module-forbid err/1.0
         }
+        sticky_forbidden_diff {
+            module-tag sticky err/1.0
+            module-forbid err/1.1
+        }
+        super-sticky_forbidden_diff {
+            module-tag super-sticky err/1.0
+            module-forbid err/1.1
+        }
     }
+    module-virtual err/1.1 ./1.0
 }
