ts: add switch in modulefile tests in 50/616

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -2,17 +2,18 @@
 if {[info exists env(TESTSUITE_ABORT_ON_ERROR)]} {
     switch -- $env(TESTSUITE_ABORT_ON_ERROR) {
         forbidden - depre_load_forbidden - load_last_forbidden - load_first_forbidden -\
-        load-any_first_forbidden - try-load_last_forbidden - try-load_first_forbidden {
+        load-any_first_forbidden - try-load_last_forbidden - try-load_first_forbidden -\
+        switch_forbidden {
             module-forbid err/1.0
         }
         hard_hidden - depre_load_hard_hidden - load_last_hard_hidden - load_first_hard_hidden -\
         load-any_first_hard_hidden - try-load_last_hard_hidden - try-load_first_hard_hidden {
             module-hide --hard err/1.0
         }
-        sticky - sticky_forbidden {
+        sticky - sticky_forbidden - switch_sticky {
             module-tag sticky err/1.0
         }
-        super-sticky - super-sticky_forbidden {
+        super-sticky - super-sticky_forbidden - switch_super-sticky {
             module-tag super-sticky err/1.0
         }
         sticky_forbidden_same {
