No switched-{off,on} error msg when run from modulefile

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1406,7 +1406,7 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
          # report switched-on module load failure under switch info block
          # unless the above reportError call already put a mesg to this block
-         if {[info exists swprocessing] && ($errMsg eq {} || [info exists\
+         if {$context eq {swload} && ($errMsg eq {} || [info exists\
             errlocalreport])} {
             # warn as this issue does not lead to a rollback of switch action
             reportWarning "Load of switched-on [getModuleDesignation\
@@ -1805,7 +1805,7 @@ proc cmdModuleUnload {context match auto force onlyureq onlyndep args} {
          }
          # report switched-off module unload failure under switch info block
          # unless the above reportError call already put a mesg to this block
-         if {[info exists swprocessing] && ($errMsg eq {} || [info exists\
+         if {$context eq {swunload} && ($errMsg eq {} || [info exists\
             errlocalreport])} {
             reportError "Unload of switched-off [getModuleDesignation loaded\
                $modname] failed" 1
