Report switched-on load failure as error rather warning

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1410,9 +1410,8 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
          }
          # report switched-on module load failure under switch info block
          if {$context eq {swload}} {
-            # warn as this issue does not lead to a rollback of switch action
-            reportWarning "Load of switched-on [getModuleDesignation\
-               $msgrecid] failed" 1
+            reportError "Load of switched-on [getModuleDesignation $msgrecid]\
+               failed" 1
          }
          # rollback settings if some evaluation went wrong
          set ret 1
