Clarify prereq record during module switch

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -628,8 +628,8 @@ proc cmdModuleSwitch {uasked tag_list old {new {}}} {
       lpopState inhibit_req_record
    }
 
-   # register modulefile to load as prereq when called from modulefile
-   if {!$uasked && !$ret_unload && $argnew ne {}} {
+   # register modulefile load attempt as prereq when called from modulefile
+   if {!$uasked && [info exists ret_load] && $argnew ne {}} {
       prereqAnyModfileCmd 0 0 $argnew
    }
 }
