Add conflict unload failed msg at end of conun unload
Rather reporting conflict unload error message in a global conflict
error management in cmdModuleLoad after modulefile evaluation, report
such error directly where it occurs in cmdModuleUnload.

A more precise error message is obtained as the exact module name,
version and variant is reported rather module specification passed to
conflict definition.

Error message is also reported in the correct event order rather at the
end.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -102,6 +102,14 @@ proc __reportErrorAndExit {message} {
    error $message {} MODULES_ERR_RENDERED
 }
 
+proc reportErrorOrWarningIfForced {message} {
+   if {[getState force]} {
+      reportWarning $message
+   } else {
+      reportError $message
+   }
+}
+
 proc reportInternalBug {message {modfile {}} {title {Module ERROR}}} {
    reportError [formatInternalBugMsg $message $modfile] 0 $title me
 }
